# system-design-roulette

./: .gitignore  DESIGN.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: TEACHER.md
scripts/: provision-vibevoice.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/prompts/: audio.txt  course.txt  exit.txt  grade.txt  plan.txt  quiz.txt  teacher.txt
src-tauri/seed/: concepts.json
src-tauri/seed/fallback_courses/: caching-strategies.json  consistent-hashing.json  rate-limiting.json
src-tauri/src/: audio.rs  commands.rs  db.rs  generator.rs  kiosk.rs  lib.rs  main.rs  mastery.rs  roulette.rs  scheduler.rs  session.rs  state.rs
src-tauri/tests/: core_loop.rs
src/lib/: ipc.ts  mock.ts  stores.svelte.ts  theme.css
src/lib/components/: AgentLog.svelte  AgentPicker.svelte  AudioPlayer.svelte  ChaosLab.svelte  ClusterBar.svelte  EnforcementPicker.svelte  EscapeHatch.svelte  Markdown.svelte  MetaBadge.svelte  ModelPicker.svelte  NodeCard.svelte  ShardRouter.svelte  StatusLED.svelte  TimePicker.svelte  TimerBar.svelte  Wheel.svelte
src/lib/screens/: AnswerReview.svelte  Completion.svelte  CourseReader.svelte  Dashboard.svelte  Idle.svelte  Quiz.svelte  Roulette.svelte  SetupWizard.svelte
src/routes/: +page.svelte
src/routes/blanker/: +page.svelte
